samples/_failures_safe/1761129263_eaa9df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5f14a84.c: In function ‘main’:
./samples/SAFE/__tmp_e5f14a84.c:165:5: error: expected expression at end of input
  165 |     Token* tokens =
      |     ^~~~~
./samples/SAFE/__tmp_e5f14a84.c:165:5: error: expected declaration or statement at end of input
